--- a/src/main/resources/my.properties
+++ b/src/main/resources/my.properties
@@ -5,7 +5,7 @@ jdbc.url=jdbc:mysql://localhost:3306/spark
 jdbc.user=root
 jdbc.password=123456
 
-jdbc.url.prod=jdbc:mysql://192.168.1.105:3306/spark
+jdbc.url.prod=jdbc:mysql://localhost:3306/spark
 jdbc.user.prod=hive
 jdbc.password.prod=hive
 
